Bug 159453 - Importing DOCX: Position of frame has gone
Summary: Importing DOCX: Position of frame has gone
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:24.8.0 target:24.2.2 target:7.6.6
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Floatingtable layoutInCell
  Show dependency treegraph
 
Reported: 2024-01-30 14:30 UTC by Robert Großkopf
Modified: 2025-03-25 07:49 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshots of the 3 different results in the last 3 releases of LO. (225.71 KB, application/pdf)
2024-01-30 14:30 UTC, Robert Großkopf
Details
Original document for testing the difference between LO 7.5 (right) and LO 7.6 (wrong) (23.16 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-01-30 14:31 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2024-01-30 14:30:24 UTC
Created attachment 192259 [details]
Screenshots of the 3 different results in the last 3 releases of LO.

Open the attached PDF document.
There are 3 screenshots of the same document.
First imported with LO 7.5.5. It looks right as expected.

Second imported with LO 7.6.4.1. Position of the frame has been set downwards and to the right. Text content will appear above the frame. If I open the properties I see the same anchor as it is anchored in LO 7.5.5, but there are different values and different interpreting of distances. The anchor is set to paragraph and the position is set to entire page, but LO 7.6.4.1 doesn't set the position, which is shown in the properties.

Third imported with LO 24.2.0.2. Seems to be the same as imported in LO 7.6.4.1, but has lost the page style "First Page".

All tested with OpenSUSE 15.4 64bit rpm Linux.
Original post see here:
https://ask.libreoffice.org/t/format-of-document-changed-after-update-to-libreoffice-7-6-4-1/101359
Comment 1 Robert Großkopf 2024-01-30 14:31:27 UTC
Created attachment 192260 [details]
Original document for testing the difference between LO 7.5 (right) and LO 7.6 (wrong)
Comment 2 m_a_riosv 2024-01-30 23:07:45 UTC
Still reproducible also with
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3be785e088cc0aa726509cf6b52b1d3b03817172
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded
Comment 3 raal 2024-01-31 00:02:25 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.6.
Adding Cc: to Michael Stahl ; Could you possibly take a look at this one?
Thanks
 a5cb46f8588ccf7fe086a6fb317daee904d87844 is the first bad commit
commit a5cb46f8588ccf7fe086a6fb317daee904d87844
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Tue Oct 31 00:18:58 2023 +0100

    source e2076cf7a92694bc94bdc9f3173c2bddbe881a89

158289: tdf#155682 sw floattable: fix DOCX with big pictures causes endless loop | https://gerrit.libreoffice.org/c/core/+/158289
Comment 4 Michael Stahl 2024-01-31 09:48:16 UTC
hmm... i'm in favor of blaming the author instead of the committer :)
Comment 5 Michael Stahl 2024-01-31 09:48:57 UTC
argh, i managed to add miklos to the crash report field instead of the CC field lol
Comment 6 Commit Notification 2024-02-13 09:01:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f74a6ef94ac957e4c146fc9923d30ce6bd31b5ce

tdf#159453 sw floattable: fix unexpected overlap of in-header fly and body text

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-02-13 11:23:49 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/c50b5b648d157e940b17e36de7c529c4ceeafd84

tdf#159453 sw floattable: fix unexpected overlap of in-header fly and body text

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-02-14 12:50:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/f1307f09e60e715877769e9fa12c0a6313fa0c1a

tdf#159453 sw floattable: fix unexpected overlap of in-header fly and body text

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Alexey 2025-01-17 21:31:23 UTC Comment hidden (obsolete)
Comment 10 Miklos Vajna 2025-01-20 09:35:48 UTC
Best to open a new bugreport for a problem that you can still reproduce, since this bug already has a fix associated with it. Thanks.
Comment 11 Alexey 2025-03-25 07:49:38 UTC
(In reply to Alexey from comment #9)
> I do not understand technical details of this bug, so I am not sure if what
> I am experiencing is the same. But when I open in Libre Office 24.2.7.2 on
> Linux Mint a DOCX document that a year ago was opening alright (as
> intended), now it lines do not spread to the full width of the document and
> the page break is in a different (wrong) place.

It seems that my issue was caused by missing fonts. So this was a non-issue. Sorry for disturbance.