tdf#159453 sw floattable: fix unexpected overlap of in-header fly and body text

Regression from commit e2076cf7a92694bc94bdc9f3173c2bddbe881a89
(tdf#155682 sw floattable: fix DOCX with big pictures causes endless
loop, 2023-10-25), the bugdoc's body text was wrapping around the
floating table from the header, while the expectation was that the top
of the body frame is below the bottom of the header frame.

It seems IsFollowingTextFlow is only needed when the relation of the
floating table is not "page", and this bugdoc has has an examplicit
vertical relation of page.

Solve the problem by limiting the IsFollowingTextFlow=true request for
the floating table to the VertOrientRelation=page case, which fixes the
bugdoc and keeps the old use-case working.

The doc model for the new bugdoc now matches the WW8 import result.

(cherry picked from commit f74a6ef94ac957e4c146fc9923d30ce6bd31b5ce)

[ Backport note: testSplitFlyNestedRowSpan no longer asserts the page
count on this branch, as that would be 7, the primary purpose of the
test is to make sure we don't layout loop and even previously the loop
control was kicking in, so the outcome is not too interesting.

The page count is correct on co-24.04. ]

Change-Id: Ia3da65cd52d70b357e448a26a50ffb92a39795e6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/164072
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>